# Figura_cMake

./: CMakeLists.txt  PryaTringle.cpp  PryaTringle.h  Pryamougolnic.h  RavBedTringle.cpp  RavBedTringle.h  RavSTringle.cpp  RavSTringle.h  Source1.cpp  Tringle.cpp  Tringle.h  fourgolnic.cpp  fourgolnic.h  kvadrat.cpp  kvadrat.h  paralelogram.cpp  paralelogram.h  pryamougolnic.cpp  romb.cpp  romb.h
