cmake_minimum_required(VERSION 3.22.0)
project(cmake_figur)
add_executable(figura Source1.cpp "fourgolnic.h" "fourgolnic.cpp" "paralelogram.h" "paralelogram.cpp" "romb.h" "romb.cpp" "Pryamougolnic.h" "pryamougolnic.cpp" "kvadrat.h" "kvadrat.cpp" "Tringle.h" "Tringle.cpp" "PryaTringle.h" "PryaTringle.cpp" "RavBedTringle.h" "RavBedTringle.cpp" "RavSTringle.h" "RavSTringle.cpp")